fixed word wrapping

--- a/TextRain/TextRain.css
+++ b/TextRain/TextRain.css
@@ -16,7 +16,8 @@ body {
     font-size : 22px;
     font-weight : bold;
     font-family : arial;
-    color : rgba(225,225,255,0.2);
+    color : rgba(225,225,255,0.5);
+    white-space: nowrap;
 }
 
 #content {
